--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img class="logo_header" src="imagens/logo.png" alt="logo">
         <nav class="navegacao_header">
             <a class="navegacao_item" href="#inicio">Inicio</a> <!--Rola até a parte da ancora de inicio-->
-            <a class="navegacao_item" href="#oqueerp">Oque é RP</a> <!--Rola até a parte da ancora de OqueéRP-->
+            <a class="navegacao_item" href="#oqueerp">O que é RP</a> <!--Rola até a parte da ancora de OqueéRP-->
             <a class="navegacao_item" href="#galeria">Galeria</a> <!--Rola até a parte da ancora de Galeria-->
         </nav>
     </header>
@@ -38,11 +38,15 @@
                 <a class="icone_faca_parte" href="https://www.instagram.com/scumbrasil.tvroleplay/?hl=pt-br"><i class="fa-brands fa-instagram"></i></a>
                 <a class="icone_faca_parte" href="https://mobile.twitter.com/ScumbrasilR"><i class="fa-brands fa-twitter"></i></a>
                 <a class="icone_faca_parte" href="https://chat.whatsapp.com/G8iEUC2YKeVJtO9HeMWBOe"><i class="fa-brands fa-whatsapp"></i></a>
-                <a class="icone_faca_parte" href=""><i class="fa-brands fa-pinterest"></i></a>
+                <a class="icone_faca_parte" href="https://br.pinterest.com/scumbrasiltvroleplay/rp-no-scum/"><i class="fa-brands fa-pinterest"></i></a>
             </div>
             <div class="divpodcast">
                 <h1 class="titulo_faca_parte">Escute nosso Podcast</h1>
-                <a class="icone_faca_parte" id="mic" href="https://chat.whatsapp.com/G8iEUC2YKeVJtO9HeMWBOe"><i class="fa-solid fa-microphone-lines"></i></a>
+               <!-- 
+                   <a class="icone_faca_parte" id="mic" href="https://chat.whatsapp.com/G8iEUC2YKeVJtO9HeMWBOe"><i class="fa-solid fa-microphone-lines"></i></a>
+                -->
+                <a class="link_podcast" href="https://discord.gg/CGCP9QexkZ"><img class="imagem_podcast" src="imagens/podcast.jpeg"></a>
+
             </div>
 
 
@@ -50,10 +54,10 @@
 
         <a class="ancorainicio" name="oqueerp"></a>        <!-- Ancora #Oque é RP-->
         <section class="voce_sabe">  
-            <h1 class="titulo_voce_sabe">Voce sabe oque é Roleplay ?</h1>
+            <h1 class="titulo_voce_sabe">Voce sabe o que é Roleplay ?</h1>
             <div class="div1_voce_sabe">
                 <div class="divtest">
-                    <p class="conteudo1_voce_sabe">Roleplay é uma forma de jogo em que os jogadores muitas vezes fingem ser outra pessoa, trabalhando somente com a criatividade dos jogadores e com os recursos que é oferecido. No caso deve-se interpretar a realidade.</p>
+                    <p class="conteudo1_voce_sabe">Roleplay é uma forma de jogo em que os jogadores muitas vezes fingem ser outra pessoa, trabalhando<strong> somente com a criatividade dos jogadores e com os recursos que é oferecido.</strong> No caso deve-se interpretar a realidade.</p>
                 </div>
                 <img class="img_rp_01" src="imagens/01.jpeg">
                 <img class="img_rp_02" src="imagens/02.jpeg">
@@ -68,19 +72,24 @@
 
         <section class="secgaleria"> 
 
-         <div id="items-wrapper">
-            <div id="items">
-               <div class="item"><img src="imagens/galeria/03.png"></div>
-               <div class="item"><img src="imagens/galeria/02.jpg"></div>
-               <div class="item"><img src="imagens/galeria/01.jpeg"></div>
-               <div class="item"><img src="imagens/galeria/04.jpeg"></div>
-               <div class="item"><img src="imagens/galeria/05.jpeg"></div>
-               <div class="item"><img src="imagens/galeria/06.jpg"></div>
-               <div class="item"><img src="imagens/galeria/07.jpg"></div>
-               <div class="item"><img src="imagens/galeria/08.jpg"></div>
+            <div id="items-wrapper">
+                <div id="items">
+                    <div class="item"><img src="imagens/galeria/03.png"></div>
+                    <div class="item"><img src="imagens/galeria/02.jpg"></div>
+                    <div class="item"><img src="imagens/galeria/01.jpeg"></div>
+                    <div class="item"><img src="imagens/galeria/04.jpeg"></div>
+                    <div class="item"><img src="imagens/galeria/05.jpeg"></div>
+                    <div class="item"><img src="imagens/galeria/06.jpg"></div>
+                    <div class="item"><img src="imagens/galeria/07.jpg"></div>
+                    <div class="item"><img src="imagens/galeria/08.jpg"></div>
+                </div>
+            </div>
+        </section>
+        <div class="div_botao">
+            <div class="div_botao2">
+                <a href="https://br.pinterest.com/scumbrasiltvroleplay/rp-no-scum/" class="botao_galeria">Galeria completa <i class="fa-brands fa-pinterest"></i></a>
             </div>
         </div>
-        </section>
 
 
 
@@ -89,18 +98,47 @@
             <h1 class="titulo_regras">Regras e Leis na ilha</h1>
             <div class="div_regras">
                 <p class="conteudo_regra"> 
-                  Salientando que regra básica primária e primordial para não fazer "besteira" em game é: Se tem dúvidas não faça ! Se não sabe se a ação que irá fazer está dentro ou fora das regras não faça. Procure um moderador ou adm e procure saber se pode fazer antes!
+                  Salientando que regra básica primária e primordial para não fazer "besteira" em game é: <strong>Se tem dúvidas não faça !</strong> Se não sabe se a ação que irá fazer está dentro ou fora das regras não faça. Procure um moderador ou adm e procure saber se pode fazer antes!
                 </p>
                 <p class="conteudo_regra">  
                     Regras básicas do Roleplay que precisam ser cumpridas na íntegra:
                 </p>
                 <p class="conteudo_regra">
-                   -Amor à vida: Significa que o jogador deve sempre valorizar sua vida acima de tudo, sem se colocar em situações de risco. Exemplo: se você for assaltado no jogo, você não pode insultar o ladrão ou sacar a arma, porque isso colocaria sua vida em risco.
+                   <strong>-Amor à vida:</strong> Significa que o jogador deve sempre valorizar sua vida acima de tudo, sem se colocar em situações de risco. Exemplo: se você for assaltado no jogo, você não pode insultar o ladrão ou sacar a arma, porque isso colocaria sua vida em risco.
                 </p>
                 <p class="conteudo_regra"> 
-                    -RDM: significa "Random Deathmatch", que é quando um jogador mata outro de forma aleatória, sem motivo algum. Proibido esse tipo de prática
+                    <strong>-RDM:</strong> significa "Random Deathmatch", que é quando um jogador mata outro de forma aleatória, sem motivo algum.<strong> Proibido esse tipo de prática.</strong>
                 </p>
             </div>
+        </section>
+
+        <section class="servidor">
+            <div class="boxinfoserver">
+                <h1>SERVER IP: 172.107.197.90:28002<br> SCUMBrasil.TV Roleplay</h1>
+                <p class="infoserver">
+                    - Wipe a cada temporada(+ ou - 4 meses). Dependendo de como está o RP pode levar mais Tempo para Wiper.<br>
+                    - Loot 0,7.<br>
+                    - Safe Zone B3<br>
+                    - Mapa exclusivo de RP.<br>
+                    - Server Híbrido com situacoes de RP em todo mapa!<br>
+                    - Eventos Fixo e aleatórios.<br>
+                    - prefeito disponível na safe.<br>
+                    - Tribos, grupo denominado dono de uma região, ou seja setor.<br>
+                    - Chat Ingame.<br>
+                    - Zombies 1.2 dano, quantidade baixa. <br>
+                    - Sentinelas Ativas dano oficial. <br>
+                    - SUV 1, 5 Pickup de Spawn <br>
+                    - 24 Slots atuais do server<br>
+                    - Motos e Quad = 5<br>
+                    - Chat Liberado geral.<br>
+                    - Respawn: <br>
+                    Aleatório=25FP<br>
+                    Setor=75FP<br>
+                    Cama Hospital=10<br>
+                    - Dano do Zumbi 1.2<br>
+                </p>
+            </div>
+
         </section>
 
         <section class="lore">
